# WFPOA

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
docs/: notes.tex  ref.bib
projects/c/: CMakeLists.txt
projects/c/src/: graph.c  graph.h  main.c  wfpoa.edit.alignment.c
projects/edit-wfpoa/edit/: edit_dp.c  edit_dp_poa.c  edit_dp_poa.h
projects/edit-wfpoa/edit/wfe_poa/: edit_wavefront_poa.c  edit_wavefront_poa.h  edit_wavefront_poa_align.c  edit_wavefront_poa_align.h  edit_wavefront_poa_backtrace.c  edit_wavefront_poa_backtrace.h  edit_wavefront_poa_display.c  edit_wavefront_poa_display.h
projects/edit-wfpoa/tools/: Makefile
projects/edit-wfpoa/utils/: Makefile  text_dag.c  text_dag.h
projects/old_C/: CMakeLists.txt  graph.c  graph.h  utils.c  utils.h
projects/rust/: Cargo.toml
projects/rust/src/: edit_alignment.rs  graph.rs  main.rs  wfa.edit.alignment.rs  wfa_edit_alignment.hashmap.rs  wfa_edit_alignment.rs
src/: .cproject  .project  Makefile  edit_alignment.rs  graph.c  graph.h  graph.rs  main.c  main.rs  wfa.edit.alignment.c  wflambda_edit_alignment.rs
src/alignment/: cigar.c  cigar.h  score_matrix.c  score_matrix.h
src/edit/: Makefile  edit_dp.h
src/edit/wfe_poa/: Makefile  edit_wavefront_poa_connect.c  edit_wavefront_poa_connect.h  edit_wavefront_poa_extend.c  edit_wavefront_poa_extend.h
src/tools/: align_wfe_poa.c
src/utils/: text_dag.c  text_dag.h
