[package]
name = "wfpoa"
version = "0.1.0"
authors = ["AndreaGuarracino <andreaguarracino@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://doc.rust-lang.org/cargo/reference/profiles.html
# https://rust-embedded.github.io/book/unsorted/speed-vs-size.html#optimize-for-speed
[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
# Hashing algorithms
fxhash = "0.2.1"
#fnv = "1.0.7"
